--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PAMO2023"
         tools:targetApi="31">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Main2Activity"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".StartActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PAMO2023.NoActionBar">
