--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         tools:targetApi="31">
         <activity android:name=".MainActivity"/>
         <activity android:name=".Main2Activity"/>
+        <activity android:name=".GraphActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <activity android:name=".QuizActivity"/>
+        <activity android:name=".ScoreActivity"/>
         <activity
             android:name=".StartActivity"
             android:exported="true"
@@ -27,5 +30,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
